# pcap2llm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO_WEB_GUI.md  pcap2llm_codex_build_brief.md  pyproject.toml
.github/workflows/: ci.yml
.local/: README.md
batches/: local_examples.toml
docs/: ANLEITUNG_DE.md  DISCOVERY.md  DOCUMENTATION_MAP.md  GITHUB_ISSUES.md  LLM_MODE.md  LLM_TROUBLESHOOTING_WORKFLOW.md  NETWORK_ELEMENT_DETECTION.md  PRIVACY_SHARING.md  PROFILES.md  PROFILES_2G3G.md  PROFILES_5G.md  PROFILES_LTE.md  PROFILES_VOICE.md  PROFILE_SELECTION.md  PROJECT_STATUS.md  QUICKSTART_5GC.md  QUICKSTART_DE.md  QUICKSTART_HTTP2_SBI.md  QUICKSTART_LTE_EPC.md  REFERENCE.md  RELEASE_CHECKLIST.md  REMEDIATION_PLAN.md  SECURITY_AUDIT_WEB_GUI.md  SESSIONS.md  SUPPORTED_ENVIRONMENTS.md  TRANSPORT_DECODE_PROFILE_PLAN.md  WEB_GUI.md  WEB_GUI_ROADMAP.md  WORKFLOWS.md  golden_corpus.md  privacy_coverage.md
docs/architecture/: current_pipeline.md  scaling_plan.md
docs/releases/: v0.1.0.md
docs/schema/: detail.schema.md  summary.schema.md
docs/security/: encryption_model.md  threat_model.md
examples/: config.sample.yaml  mapping.sample.yaml  network_element_mapping.csv  wireshark_hosts.sample
profiles/: 2g3g-ss7-geran.yaml  5g-core.yaml  lte-core.yaml
scripts/: benchmark_pipeline.py  check_package_contents.py  check_package_metadata.py  install-git-hooks.sh  run_all_local_pcaps.sh  run_local_batches.py  smoke_test_web_gui.sh  update_golden.py
scripts/git-hooks/: pre-commit
src/pcap2llm/: __init__.py  __main__.py  app_anomaly.py  chatgpt.py  claude.py  cli.py  cli_result.py  config.py  discovery.py  error_codes.py  gemini.py  hash_utils.py  index_inspector.py  index_models.py  inspect_enrichment.py  inspector.py  local_batch_runner.py  models.py  normalizer.py  output_metadata.py  pipeline.py  (+11 more)
tests/: test_app_anomaly.py  test_chatgpt.py  test_claude.py  test_cli.py  test_cli_llm_mode.py  test_discovery.py  test_dx_quality.py  test_gemini.py  test_golden_corpus.py  test_inspect_enrichment.py  test_inspector.py  test_local_batch_runner.py  test_local_hosts.py  test_normalizer.py  test_orchestration.py  test_package_contents_checker.py  test_package_metadata_checker.py  test_pipeline.py  test_privacy_profiles.py  test_profiles.py  test_profiles_2g3g_interfaces.py  test_profiles_5g_core_interfaces.py  test_profiles_volte_vonr.py  test_protector.py  test_recommendation.py  test_recommendation_dns.py  test_resolver.py  test_resolver_extended.py  test_schema_contract.py  test_summarizer.py  test_summarizer_extended.py  test_two_pass.py  test_visualize.py  testutils.py
(+123 files in other folders)
