[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap2llm"
version = "0.1.0"
description = "Format telecom PCAP traces into stable, privacy-aware artifacts for downstream LLM troubleshooting."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Frank März", email = "github@rollhofen.de" }
]
license-files = ["LICENSE"]
keywords = ["pcap", "tshark", "telecom", "llm", "artifacts", "wireshark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0",
  "typer>=0.12,<1.0",
  "rich>=13.0",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9"
]

[project.urls]
Homepage = "https://github.com/FrnkMrz/pcap2llm"
Repository = "https://github.com/FrnkMrz/pcap2llm"
Issues = "https://github.com/FrnkMrz/pcap2llm/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "build>=1.2",
  "httpx>=0.28"
]
encrypt = [
  "cryptography>=43.0"
]

[project.scripts]
pcap2llm = "pcap2llm.cli:app"
pcap2llm-web = "pcap2llm.web.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pcap2llm = ["profiles/*.yaml", "privacy_profiles/*.yaml", "web/templates/*.html", "web/static/*.css", "web/static/*.js"]
